update social chair and publicity chair

--- a/index.html
+++ b/index.html
@@ -275,6 +275,31 @@
                 <h3 class="text-center mb-4" style="color: var(--primary-color); font-weight: 600;">Technical Program Committee</h3>
                 <div class="col-lg-8 mx-auto">
                     <div class="alert alert-info text-center" role="alert">Coming Soon</div>
+                    <!-- Social Chair -->
+                    <h4 class="text-center mt-4" style="color: var(--primary-color); font-weight: 600;">
+                        Social Chair
+                    </h4>
+                    <ul class="chair-list mb-4">
+                        <li>
+                        <a href="https://zhang-xie.github.io/" target="_blank" rel="noopener noreferrer">
+                            Xie Zhang
+                        </a>
+                        , The University of Hong Kong
+                        </li>
+                    </ul>
+                    
+                    <!-- Publicity Chair -->
+                    <h4 class="text-center mt-4" style="color: var(--primary-color); font-weight: 600;">
+                        Publicity Chair
+                    </h4>
+                    <ul class="chair-list li">
+                        <li>
+                        <a href="https://scholar.google.com/citations?user=usRnJPMAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
+                            Chengxiao Li
+                        </a>
+                        , The University of Hong Kong
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
