--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     </h4>
                     <ul class="chair-list li">
                         <li>
-                        <a href="https://scholar.google.com/citations?user=usRnJPMAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
+                        <a href="https://mokems.github.io/" target="_blank" rel="noopener noreferrer">
                             Chengxiao Li
                         </a>
                         , The University of Hong Kong
