update the chair name and url of format

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <h4>Submission Details</h4>
                         <p>
                         Submissions should be up to 5 pages in length, <em>excluding references</em>, and follow the 
-                        <a href="https://www.sigmobile.org/mobicom/2025/authors.html" target="_blank">ACM SIGMOBILE double-column format</a>.
+                        <a href="https://www.acm.org/publications/proceedings-template" target="_blank">ACM SIGMOBILE double-column format</a>.
                         Accepted papers will be presented at the workshop and published in the ACM Digital Library as part of the MobiCom 2025 Workshop Proceedings.
                         </p>                        
                         
@@ -277,7 +277,7 @@
                     <div class="alert alert-info text-center" role="alert">Coming Soon</div>
                     <!-- Social Chair -->
                     <h4 class="text-center mt-4" style="color: var(--primary-color); font-weight: 600;">
-                        Social Chair
+                        Publicity Chair
                     </h4>
                     <ul class="chair-list mb-4">
                         <li>
@@ -290,7 +290,7 @@
                     
                     <!-- Publicity Chair -->
                     <h4 class="text-center mt-4" style="color: var(--primary-color); font-weight: 600;">
-                        Publicity Chair
+                        Workshop Web Chair
                     </h4>
                     <ul class="chair-list li">
                         <li>
