--- a/index.html
+++ b/index.html
@@ -155,15 +155,17 @@
                         <P> Topics of interest include (but are not limited to):</p>
                         <ul class="topic-list">
                           <li>Gesture, activity, and pose recognition using thermal/infrared signals</li>
-                          <li>Indoor localization and spatial tracking with thermal data</li>
-                          <li>Depth sensing and ranging techniques (e.g., HADAR, stereo thermal)</li>
+                          <li>Thermal localization and tracking</li>
+                          <li>Thermal depth estimation and ranging</li>
+                          <li>Thermal imaging fundamentals and algorithms</li>
                           <li>Robotic perception and navigation augmented by thermal vision</li>
                           <li>Material sensing and object classification using thermal signatures</li>
-                          <li>Privacy-preserving sensing in homes, healthcare, and public spaces</li>
+                          <li>Privacy-preserving sensing for homes, healthcare, and interactions</li>
                           <li>Energy-efficient algorithms and embedded platforms for thermal sensing</li>
                           <li>Machine learning and multimodal fusion for thermal perception</li>
-                          <li>Novel sensor hardware, arrays, optics, and metasurfaces</li>
-                          <li>Applications in mobile health, AR/VR, smart homes, cities, and emergency response</li>
+                          <li>Novel sensors, optics, and metasurface designs</li>
+                          <li>Thermal sensing for building occupancy and energy efficiency</li>
+                          <li>Applications in health, AR/VR, cities, and emergency response</li>
                         </ul>
                         
                         <h4>Submission Details</h4>
