--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                           <li>Gesture, activity, and pose recognition using thermal/infrared signals</li>
                           <li>Thermal localization and tracking</li>
                           <li>Thermal depth estimation and ranging</li>
-                          <li>Thermal imaging fundamentals and algorithms</li>
+                          <li>Thermal imaging and space reconstruction</li>
                           <li>Robotic perception and navigation augmented by thermal vision</li>
                           <li>Material sensing and object classification using thermal signatures</li>
                           <li>Privacy-preserving sensing for homes, healthcare, and interactions</li>
