Update submission instructions with detailed requirements and formatting

--- a/index.html
+++ b/index.html
@@ -168,20 +168,22 @@
                           <li>Applications in health, AR/VR, cities, and emergency response</li>
                         </ul>
                         
-                        <h4>Submission Details</h4>
-                        <p>
-                        Submissions should be up to 5 pages in length, <em>excluding references</em>, and follow the 
-                        <a href="https://www.acm.org/publications/proceedings-template" target="_blank">ACM SIGMOBILE double-column format</a>.
-                        Accepted papers will be presented at the workshop and published in the ACM Digital Library as part of the MobiCom 2025 Workshop Proceedings.
-                        </p>                        
-                        
-                        <p> Stay tuned for submission instructions. 
-                        We look forward to your contributions and to building the community shaping the future of thermal sensing and computing!
-                        </p>
+                        <h4>Submission Instructions</h4>
+                        <ul class="submission-details">
+                            <li><strong>Originality:</strong> Submissions must be <strong>original, unpublished work</strong>, and not under review elsewhere.</li>
+                            <li><strong>Format:</strong> Papers should be submitted in PDF format, be <strong>no longer than 5 pages, excluding references</strong>, and follow the 
+                                <a href="https://www.acm.org/publications/proceedings-template" target="_blank">ACM SIGMOBILE double-column format</a>.
+                            </li>
+                            <li><strong>Review Process:</strong> The review process will be <strong>double-blind</strong>. Authors must anonymize their submissions by removing names, affiliations, and any other identifying information for peer review.</li>
+                            <li><strong>Publication:</strong> Accepted papers will <strong>be presented at the workshop and published in the ACM Digital Library</strong> as part of the MobiCom 2025 Workshop Proceedings.</li>
+                        </ul>
+
+                        <p>If you have any questions, please contact Chengxiao via <a href="mailto:u3603456@connect.hku.hk">email</a>.</p>
 
                     <div class="text-center mt-4">
-                        <a href="#" class="btn btn-primary disabled" aria-disabled="true">Submission Guidelines <span class="badge bg-secondary ms-2">Coming Soon</span></a>
-                        <!-- TODO: Replace # with the actual link to the guidelines when ready -->
+                        <a href="https://hotsense25.hotcrp.com/" class="btn btn-primary" target="_blank">
+                            <i class="fas fa-external-link-alt me-2"></i>Submission Website
+                        </a>
                     </div>
                 </div>
             </div>
