adjust the banner image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Image Comparison Slider -->
         <div class="image-comparison">
             <div class="comparison-wrapper">
-                <img src="assets/rgb_bg.png" alt="Visible Light View" class="comparison-image visible-image">
+                <img src="assets/rgb_bg_2.png" alt="Visible Light View" class="comparison-image visible-image">
                 <img src="assets/thermal_bg.svg" alt="Thermal Infrared View" class="comparison-image thermal-image">
                 <div class="comparison-handle">
                     <div class="handle-line"></div>
