update two keynotes

--- a/index.html
+++ b/index.html
@@ -203,18 +203,38 @@
                                 <h4>Welcome and Workshop Introduction</h4>
                             </div>
                         </div>
-                        <div class="program-item">
+                        <!-- <div class="program-item">
                             <div class="time">TBA</div>
                             <div class="content">
                                 <h4>Keynote I</h4>
                                 <p>Academia</p>
                             </div>
+                        </div> -->
+                        <div class="program-item">
+                            <div class="time">TBA</div>
+                            <div class="content">
+                                <h4>
+                                    Keynote I: 
+                                    <a href="https://en.westlake.edu.cn/faculty/fanglin-bao.html" target="_blank" style="text-decoration: none; color: inherit;">
+                                        Prof. Fanglin Bao
+                                    </a>
+                                </h4>
+                                <p>Assistant Professor, Westlake University</p>
+                                <p><em>Title: TBD</em></p>
+                                </p>
+                            </div>
                         </div>
                         <div class="program-item">
                             <div class="time">TBA</div>
                             <div class="content">
-                                <h4>Keynote II</h4>
-                                <p>Industry</p>
+                                <h4>
+                                    Keynote II: 
+                                    <a href="https://www.linkedin.com/in/stanislav-markov-745a18/?originalSubdomain=hk" target="_blank" style="text-decoration: none; color: inherit;">
+                                        Stanislav Markov
+                                    </a>
+                                </h4>
+                                <p>Meridian Innovation</p>
+                                <p><em>Title: TBD</em></p>
                             </div>
                         </div>
                         <div class="program-item">
