--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
         /* 图片悬停放大和阴影 */
         .speaker-photo {
           transition: transform 0.3s ease, box-shadow 0.3s ease;
+          max-width: 100%;
+          height: auto;
         }
         a:hover .speaker-photo {
           transform: scale(1.05);
           box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
           cursor: pointer;
+          max-width: 100%;
+          height: auto;
         }
         
         /* 姓名悬停变色加下划线 */
@@ -240,11 +244,11 @@
                                 <p><strong>Title:</strong> <em>Heat-assisted Detection and Ranging</em></p> -->
 
                                  <!-- 图片 + Affiliation + Title 并排 -->
-                                <div class="row mb-3" style="display: flex; align-items: flex-start;">
+                                <div class="row mb-3 g-3 align-items-start" >
                                     <!-- 左边图片 -->
-                                    <div class="col-md-3 text-center">
+                                    <div class="col-12 col-md-3 text-center ">
                                         <a href="https://en.westlake.edu.cn/faculty/fanglin-bao.html" target="_blank" style="text-decoration: none;">
-                                            <img src="assets/Fanglin.jpg" alt="Prof. Fanglin Bao" class="speaker-photo" style="max-width: 160px; height: auto; margin-bottom: 0.5rem;">
+                                            <img src="assets/Fanglin.jpg" alt="Prof. Fanglin Bao" class="speaker-photo img-fluid rounded" style=" height: auto; ">
                                         </a>
                                         <div style="font-weight: 600;">
                                             <a href="https://en.westlake.edu.cn/faculty/fanglin-bao.html" target="_blank" class="speaker-name" style="text-decoration: none; color: inherit;">
@@ -269,7 +273,7 @@
                                         
                                     </div> -->
                                     <!-- Abstract with toggle -->
-                                    <div class="col-md-9" style="padding-right: 1.9rem;">
+                                    <div class="col-12 col-md-9" style="padding-right: 1.9rem;">
                                         <div id="abstract-collapse" style="max-height: 180px; overflow: hidden; transition: max-height 0.5s ease;">
                                             <p style="text-align: justify; margin-bottom: 1rem;">
                                                 <strong>Abs:</strong> The emerging Industry 4.0 of smart technologies calls for a future with scalable human-robot social interactions.
@@ -320,7 +324,7 @@
                                     <!-- 左边图片 -->
                                     <div class="col-md-3 text-center">
                                         <a href="https://www.linkedin.com/in/stanislav-markov-745a18/?originalSubdomain=hk" target="_blank" style="text-decoration: none;">
-                                            <img src="assets/Stanislav.jpg" alt="Stanislav Markov" class="speaker-photo" style="max-width: 160px; height: auto; margin-bottom: 0.5rem;">
+                                            <img src="assets/Stanislav.jpg" alt="Stanislav Markov" class="speaker-photo" style=" height: auto; margin-bottom: 0.5rem;">
                                         </a>
                                         <div style="font-weight: 600;">
                                             <a href="https://www.linkedin.com/in/stanislav-markov-745a18/?originalSubdomain=hk" target="_blank" class="speaker-name" style="text-decoration: none; color: inherit;">
