--- a/index.html
+++ b/index.html
@@ -64,13 +64,21 @@
                     <h1 class="display-4 fw-bold">HotSense</h1>
                     <h2 class="h3 mb-4">ACM International Workshop on Thermal Sensing and Computing</h2>
                     <p class="lead mb-4">Co-located with ACM MobiCom 2025 | November 8, 2025 | Hong Kong, China</p>
-                    <!-- <div class="d-flex justify-content-center gap-3 mb-4">
-                        <a href="#cfp" class="btn btn-primary btn-lg">Submit Paper</a>
-                        <a href="#about" class="btn btn-outline-light btn-lg">Learn More</a>
-                    </div> -->
+                    
                 </div>
             </div>
         </div>
+        <!-- <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-12 col-md-10 col-lg-8 text-center hero-content">
+                <h1 class="fw-bold" style="font-size: clamp(2rem, 5vw, 3.5rem);">HotSense</h1>
+                <h2 class="mb-4" style="font-size: clamp(1rem, 2.5vw, 1.5rem);">ACM International Workshop on Thermal Sensing and Computing</h2>
+                <p class="lead mb-4" style="font-size: clamp(0.9rem, 2vw, 1.25rem);">
+                  Co-located with ACM MobiCom 2025 | November 8, 2025 | Hong Kong, China
+                </p>
+              </div>
+            </div>
+          </div> -->
         
         <!-- Image Comparison Slider -->
         <div class="image-comparison">
