--- a/index.html
+++ b/index.html
@@ -422,9 +422,96 @@
             </div>
             <!-- Technical Program Committee -->
             <div class="mt-5">
-                <h3 class="text-center mb-4" style="color: var(--primary-color); font-weight: 600;">Technical Program Committee</h3>
-                <div class="col-lg-8 mx-auto">
-                    <div class="alert alert-info text-center" role="alert">Coming Soon</div>
+                <!-- <h3 class="text-center mb-4" style="color: var(--primary-color); font-weight: 600;">Technical Program Committee</h3>
+                <div class="col-lg-8 mx-auto"> -->
+                    <!-- <div class="alert alert-info text-center" role="alert">Coming Soon</div> -->
+                    <!-- Technical Program Committee -->
+                    <h3 class="text-center mb-4" style="color: var(--primary-color); font-weight: 600;">
+                        Technical Program Committee
+                      </h3>
+                      <div class="col-lg-8 mx-auto">
+                        <ul class="chair-list mb-4" style="list-style: none; padding: 0;">
+                          <li class="mb-3">
+                            <a href="https://aswin.ri.cmu.edu/" target="_blank" rel="noopener noreferrer"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Aswin Sankaranarayanan
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">Carnegie Mellon University</span>
+                          </li>
+                          <li class="mb-3">
+                            <a href="mailto:bing-w.wang@polyu.edu.hk"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Bing Wang
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">Hong Kong Polytechnic University</span>
+                          </li>
+                          <li class="mb-3">
+                            <a href="mailto:vishnu@msu.edu"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Boddeti, Vishnu
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">Michigan State University</span>
+                          </li>
+                          <li class="mb-3">
+                            <a href="https://xiaoxuan.me/" target="_blank" rel="noopener noreferrer"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Chris Xiaoxuan Lu
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">University College London (UCL), United Kingdom</span>
+                          </li>
+                          <li class="mb-3">
+                            <a href="mailto:lizhu@umkc.edu"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Zhu Li
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">University of Missouri–Kansas City</span>
+                          </li>
+                          <li class="mb-3">
+                            <a href="https://risqiutama.github.io/" target="_blank" rel="noopener noreferrer"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Muhamad Risqi Utama Saputra
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">Monash University, Indonesia</span>
+                          </li>
+                          <li class="mb-3">
+                            <a href="https://p.gusmao@surrey.ac.uk" target="_blank" rel="noopener noreferrer"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Pedro Porto Buarque De Gusmao
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">University of Surrey</span>
+                          </li>
+                          <li class="mb-3">
+                            <a href="mailto:Q.Xie2@leeds.ac.uk"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Qian Xie
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">University of Leeds</span>
+                          </li>
+                          <li class="mb-3">
+                            <a href="https://profiles.imperial.ac.uk/sen.wang" target="_blank" rel="noopener noreferrer"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Sen Wang
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">Imperial College London</span>
+                          </li>
+                          <li class="mb-3">
+                            <a href="https://ukcheolshin.github.io/" target="_blank" rel="noopener noreferrer"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Ukcheol Shin
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">Carnegie Mellon University, United States</span>
+                          </li>
+                          <li class="mb-3">
+                            <a href="https://zhang-xie.github.io/" target="_blank" rel="noopener noreferrer"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Xie Zhang
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">The University of Hong Kong</span>
+                          </li>
+                        </ul>
+                      </div>
+                      
+
                     <!-- Social Chair -->
                     <h4 class="text-center mt-4" style="color: var(--primary-color); font-weight: 600;">
                         Publicity Chair
