--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                             <span style="font-size: 0.9rem; color: #555;">Monash University, Indonesia</span>
                           </li>
                           <li class="mb-3">
-                            <a href="https://p.gusmao@surrey.ac.uk" target="_blank" rel="noopener noreferrer"
+                            <a href="mailto:p.gusmao@surrey.ac.uk" 
                                style="font-weight: 600; text-decoration: none; color: inherit;">
                               Pedro Porto Buarque De Gusmao
                             </a><br>
