--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                       <div class="col-lg-8 mx-auto">
                         <ul class="chair-list mb-4" style="list-style: none; padding: 0;">
                           <li class="mb-3">
-                            <a href="https://aswin.ri.cmu.edu/" target="_blank" rel="noopener noreferrer"
+                            <a href="mailto:saswin@andrew.cmu.edu" 
                                style="font-weight: 600; text-decoration: none; color: inherit;">
                               Aswin Sankaranarayanan
                             </a><br>
