--- a/index.html
+++ b/index.html
@@ -474,11 +474,32 @@
                             <span style="font-size: 0.9rem; color: #555;">Monash University, Indonesia</span>
                           </li>
                           <li class="mb-3">
+                            <a href="https://www.cs.ox.ac.uk/people/niki.trigoni/" target="_blank" rel="noopener noreferrer"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                                Niki Trigoni
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">University of Oxford</span>
+                          </li>
+                          <li class="mb-3">
                             <a href="mailto:p.gusmao@surrey.ac.uk" 
                                style="font-weight: 600; text-decoration: none; color: inherit;">
                               Pedro Porto Buarque De Gusmao
                             </a><br>
                             <span style="font-size: 0.9rem; color: #555;">University of Surrey</span>
+                          </li>
+                          <li class="mb-3">
+                            <a href="https://vishwa91.github.io/" target="_blank" rel="noopener noreferrer"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                               Vishwanath  Saragadam
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">University of California</span>
+                          </li>
+                          <li class="mb-3">
+                            <a href="https://www.cswu.me/" target="_blank" rel="noopener noreferrer"
+                               style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Chenshu Wu
+                            </a><br>
+                            <span style="font-size: 0.9rem; color: #555;">The University of Hong Kong</span>
                           </li>
                           <li class="mb-3">
                             <a href="mailto:Q.Xie2@leeds.ac.uk"
