--- a/index.html
+++ b/index.html
@@ -422,11 +422,8 @@
             </div>
             <!-- Technical Program Committee -->
             <div class="mt-5">
-                <!-- <h3 class="text-center mb-4" style="color: var(--primary-color); font-weight: 600;">Technical Program Committee</h3>
-                <div class="col-lg-8 mx-auto"> -->
-                    <!-- <div class="alert alert-info text-center" role="alert">Coming Soon</div> -->
-                    <!-- Technical Program Committee -->
-                    <h3 class="text-center mb-4" style="color: var(--primary-color); font-weight: 600;">
+                
+                    <!-- <h3 class="text-center mb-4" style="color: var(--primary-color); font-weight: 600;">
                         Technical Program Committee
                       </h3>
                       <div class="col-lg-8 mx-auto">
@@ -530,8 +527,84 @@
                             <span style="font-size: 0.9rem; color: #555;">The University of Hong Kong</span>
                           </li>
                         </ul>
+                      </div> -->
+                      <h3 class="text-center mb-4" style="color: var(--primary-color); font-weight: 600;">
+                        Technical Program Committee
+                      </h3>
+                      <div class="mx-auto" style="max-width: 1200px; width: 100%;">
+                        <ul class="chair-list_TPC mb-4" style="list-style: none; padding: 0; font-size: 0.95rem;">
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="mailto:saswin@andrew.cmu.edu" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Aswin Sankaranarayanan
+                            </a>, Carnegie Mellon University
+                          </li>
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="mailto:bing-w.wang@polyu.edu.hk" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Bing Wang
+                            </a>, Hong Kong Polytechnic University
+                          </li>
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="mailto:vishnu@msu.edu" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Boddeti, Vishnu
+                            </a>, Michigan State University
+                          </li>
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="https://xiaoxuan.me/" target="_blank" rel="noopener noreferrer" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Chris Xiaoxuan Lu
+                            </a>, University College London, United Kingdom
+                          </li>
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="mailto:lizhu@umkc.edu" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Zhu Li
+                            </a>, University of Missouri–Kansas City
+                          </li>
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="https://risqiutama.github.io/" target="_blank" rel="noopener noreferrer" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Muhamad Risqi Utama Saputra
+                            </a>, Monash University, Indonesia
+                          </li>
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="https://www.cs.ox.ac.uk/people/niki.trigoni/" target="_blank" rel="noopener noreferrer" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Niki Trigoni
+                            </a>, University of Oxford
+                          </li>
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="mailto:p.gusmao@surrey.ac.uk" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Pedro Porto Buarque De Gusmao
+                            </a>, University of Surrey
+                          </li>
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="https://vishwa91.github.io/" target="_blank" rel="noopener noreferrer" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Vishwanath Saragadam
+                            </a>, University of California
+                          </li>
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="https://www.cswu.me/" target="_blank" rel="noopener noreferrer" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Chenshu Wu
+                            </a>, The University of Hong Kong
+                          </li>
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="mailto:Q.Xie2@leeds.ac.uk" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Qian Xie
+                            </a>, University of Leeds
+                          </li>
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="https://profiles.imperial.ac.uk/sen.wang" target="_blank" rel="noopener noreferrer" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Sen Wang
+                            </a>, Imperial College London
+                          </li>
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="https://ukcheolshin.github.io/" target="_blank" rel="noopener noreferrer" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Ukcheol Shin
+                            </a>, Carnegie Mellon University, United States
+                          </li>
+                          <li class="mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                            <a href="https://zhang-xie.github.io/" target="_blank" rel="noopener noreferrer" style="font-weight: 600; text-decoration: none; color: inherit;">
+                              Xie Zhang
+                            </a>, The University of Hong Kong
+                          </li>
+                        </ul>
                       </div>
-                      
 
                     <!-- Social Chair -->
                     <h4 class="text-center mt-4" style="color: var(--primary-color); font-weight: 600;">
