extend the deadline

--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
                         <div class="timeline-item">
                             <div class="timeline-marker"></div>
                             <div class="date">Aug 10, 2025</div>
-                            <div class="content">Paper Submission Deadline</div>
+                            <!-- <div class="date">
+                              Aug 10, 2025 <span class="extended">(extended)</span>
+                            </div> -->
+                            <div class="content">Paper Submission Deadline (extended)</div>
                         </div>
                         <div class="timeline-item">
                             <div class="timeline-marker"></div>
